# autonomus_driver

./: CMakeLists.txt  README.md
frames/: auto_pilot_test.cpp  frame0_description.txt  frame106_description.txt  frame1_description.txt  frame24_description.txt  frame38_description.txt  frame43_description.txt  frame70_description.txt  test_data19_description.txt  test_data35_description.txt  test_data61_description.txt  test_data65_description.txt  test_data71_description.txt  test_data75_description.txt  test_data79_description.txt  test_data7_description.txt
frames/training_data/: labels.csv  training_data.csv
include/camera/: camera.h  frame_dispatcher_client.h  frame_dispatcher_interface.h
include/common/: color_extractor.h  config_parser.h  drawer.h  logger.h
include/distance/: distance_client.h  distance_client_interface.h
include/road_lane_detector/: road_lane_detector.h  road_lane_detector_canny.h  road_lane_detector_contours.h
include/road_line_detector/: road_line_detector.h
include/road_sign_detector/: mandatory_sign_detector.h  speed_limit_detector.h  turn_sign_detector.h
include/steering/: auto_pilot.h  steering_client.h  steering_client_interface.h
include/steering_control/: steering_control.h
include/traffic_light_detector/: traffic_light_detector.h
src/: linesTest.cpp  main.cpp  trainer.cpp
src/camera/: camera.cpp  camera_config.txt  frame_dispatcher_client.cpp
src/common/: color_extractor.cpp  config_parser.cpp  drawer.cpp  logger.cpp
src/distance/: distance_client.cpp
src/easywsclient/: easywsclient.cpp
src/helpers/: hsvTest.cpp  hu_moments_calculator.cpp  normalized_data.csv  normalizer.py  photographer.cpp
src/road_lane_detector/: road_lane_detector_canny.cpp  road_lane_detector_contours.cpp
src/road_line_detector/: road_line_detector.cpp
src/road_sign_detector/: mandatory_sign_detector.cpp  speed_limit_detector.cpp  turn_sign_detector.cpp
src/steering/: auto_pilot.cpp  curl_config.txt  steering_client.cpp
src/steering_control/: steering_control.cpp
src/traffic_light_detector/: traffic_light_detector.cpp
tests/: auto_pilot_test.cpp  mandatory_sign_detector_test.cpp  road_lane_detector_canny_test.cpp  speed_limit_detector_test.cpp  traffic_light_detector_test.cpp
videos/: raw_bypassing_turn_right_and_brake_to_obstancle_0.avi  raw_bypassing_turn_right_and_brake_to_obstancle_1.avi  raw_bypassing_turn_right_and_brake_to_obstancle_2.avi  raw_drivingi_in_a_curve_and_brake_to_obstacle.avi  raw_drivingi_in_a_curve_and_brake_to_obstacle_1.avi  raw_drivingi_in_a_curve_and_brake_to_obstacle_2.avi  raw_make_u_turn_left_and_brake_to_obstacle_0.avi  raw_make_u_turn_left_and_brake_to_obstacle_1.avi  raw_make_u_turn_left_and_brake_to_obstacle_2.avi  raw_turn_left_and_brake_to_obstacle_0.avi  raw_turn_left_and_brake_to_obstacle_1.avi  raw_turn_left_and_brake_to_obstacle_2.avi  result_bypassing_turn_right_and_brake_to_obstancle_0.avi  result_bypassing_turn_right_and_brake_to_obstancle_1.avi  result_bypassing_turn_right_and_brake_to_obstancle_2.avi  result_drivingi_in_a_curve_and_brake_to_obstacle_1.avi  result_make_u_turn_left_and_brake_to_obstacle_1.avi  result_turn_left_and_brake_to_obstacle_0.avi  result_turn_left_and_brake_to_obstacle_1.avi
